Add minor changes
add explicit width and height
change language used color

--- a/styles.css
+++ b/styles.css
@@ -141,7 +141,6 @@ main {
   padding: 5px 5px 5px 50px;
 } */
 .img-container img {
-  width: 5rem;
   z-index: 1;
 }
 .info-container {
@@ -296,7 +295,7 @@ main hr {
 }
 .language-used{
   font-size: 12px;
-  color: #1a9797;
+  color: #23DCDC;
 }
 .more-repo{
   display: block;
