--- a/styles.css
+++ b/styles.css
@@ -66,24 +66,26 @@ nav {
 }
 nav ul {
   display: grid;
-  grid-template-columns: 2fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   justify-content: center;
-  margin: 0 1rem;
+  /* margin: 0 1rem; */
 }
 nav li {
   display: block;
+  margin: .5rem
+
 }
 nav li a {
   display: block;
   text-align: center;
-  padding: 1rem;
+  padding: .5rem;
   font-size: 13px;
   color: #fff;
 }
-nav ul li:nth-child(1) {
+/* nav ul li:nth-child(1) {
   justify-self: start;
   margin-right: 2rem;
-}
+} */
 
 /* HOME */
 
